third_party/blink/web_tests/external/wpt/media-capabilities/idlharness.any.worker-expected.txt
This is a testharness.js-based test.
PASS idlharness
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
FAIL Partial interface Navigator: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface WorkerNavigator: original interface defined assert_true: Original interface should be defined expected true got false
FAIL Partial interface Screen: original interface defined assert_true: Original interface should be defined expected true got false
PASS MediaCapabilities interface: existence and properties of interface object
PASS MediaCapabilities interface object length
PASS MediaCapabilities interface object name
PASS MediaCapabilities interface: existence and properties of interface prototype object
PASS MediaCapabilities interface: existence and properties of interface prototype object's "constructor" property
PASS MediaCapabilities interface: existence and properties of interface prototype object's @@unscopables property
PASS MediaCapabilities interface: operation decodingInfo(MediaDecodingConfiguration)
PASS MediaCapabilities interface: operation encodingInfo(MediaEncodingConfiguration)
PASS ScreenLuminance interface: existence and properties of interface object
Harness: the test ran to completion.

